# aruco

./: CMakeLists.txt  package.xml
include/aruco/: Aruco.hpp
src/: ArucoDetector.cpp  ArucoMarker.cpp  ArucoMarkerInfo.cpp  CornerRefinement.cpp  SquareFinder.cpp
src/math/: Quadrilateral.cpp  Transformations.cpp  Triangle.cpp
src/ros/: Aruco.cpp  ArucoNode.cpp
