<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>aruco</name>
	<version>1.0.0</version>
	<description>The aruco package can be used to detect, track and calculate pose from aruco markers.</description>
	<maintainer email="tentone@outlook.pt">tentone</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<depend>image_transport</depend>
	<depend>cv_bridge</depend>
	<depend>rclcpp</depend>
	<build_depend>rosidl_cmake</build_depend>
	<depend>sensor_msgs</depend>
	<depend>rosidl_default_generators</depend>
	<depend>builtin_interfaces</depend>
	<depend>std_msgs</depend>

	<exec_depend>launch_ros</exec_depend>
	<exec_depend>launch_xml</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_cmake_gmock</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
